# miniviewer

./: .gitignore  Arg.h  CMakeLists.txt  README.md  compile.sh  main.cpp  meshplot.m  optionparser.h  viewDirectory.sh
data/: cylinder1.off  cylinder2.off
open_with_miniviewer.app/Contents/: Info.plist  document.wflow
